粗略地修复了一些警告 注意这些都是在jdk 17的基础上去修改的